--- a/configs/ds_config.json
+++ b/configs/ds_config.json
@@ -1,27 +1,16 @@
 {
     "zero_optimization": {
-        "stage": 3,
+        "stage": 2,
         "offload_optimizer": {
-            "device": "cpu",
-            "pin_memory": true
-        },
-        "offload_param": {
             "device": "cpu",
             "pin_memory": true
         },
         "overlap_comm": true,
         "contiguous_gradients": true,
-        "sub_group_size": 1e9,
-        "reduce_bucket_size": 1e9,
-        "stage3_prefetch_bucket_size": 1e9,
-        "stage3_param_persistence_threshold": 1e6,
-        "stage3_max_live_parameters": 1e9,
-        "stage3_max_reuse_distance": 1e9,
-        "gather_16bit_weights_on_model_save": true
+        "reduce_bucket_size": 5e8
     },
     "fp16": {
         "enabled": true,
-        "auto_cast": false,
         "loss_scale": 0,
         "loss_scale_window": 1000,
         "initial_scale_power": 16,
@@ -38,19 +27,16 @@
         }
     },
     "scheduler": {
-        "type": "WarmupDecayLR",
+        "type": "WarmupLR",
         "params": {
             "warmup_min_lr": 0,
             "warmup_max_lr": 2e-5,
-            "warmup_num_steps": 500,
-            "total_num_steps": 50000
+            "warmup_num_steps": 50
         }
     },
     "steps_per_print": 10,
-    "train_batch_size": 96,
-    "train_micro_batch_size_per_gpu": 4,
+    "train_batch_size": 16,
+    "train_micro_batch_size_per_gpu": 2,
     "gradient_accumulation_steps": 4,
-    "gradient_clipping": 1.0,
-    "wall_clock_breakdown": false,
-    "zero_allow_untested_optimizer": false
+    "wall_clock_breakdown": false
 }
