--- a/configs/ds_config.json
+++ b/configs/ds_config.json
@@ -1,13 +1,19 @@
 {
     "zero_optimization": {
-        "stage": 2,
+        "stage": 3,
         "offload_optimizer": {
+            "device": "cpu",
+            "pin_memory": true
+        },
+        "offload_param": {
             "device": "cpu",
             "pin_memory": true
         },
         "overlap_comm": true,
         "contiguous_gradients": true,
-        "reduce_bucket_size": 5e8
+        "reduce_bucket_size": 5e8,
+        "stage3_prefetch_bucket_size": 5e8,
+        "stage3_param_persistence_threshold": 1e6
     },
     "fp16": {
         "enabled": true,
@@ -35,8 +41,8 @@
         }
     },
     "steps_per_print": 10,
-    "train_batch_size": 24,
-    "train_micro_batch_size_per_gpu": 3,
+    "train_batch_size": 16,
+    "train_micro_batch_size_per_gpu": 1,
     "gradient_accumulation_steps": 4,
     "wall_clock_breakdown": false
 }
