dependencies version upgrade

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,15 @@ torchvision==0.20
 transformers==4.40.0
 datasets>=2.12.0
 accelerate>=0.20.0
-peft>=0.4.0
+peft==0.8.2
 bitsandbytes>=0.40.0
-trl>=0.7.1
+trl==0.7.10
 wandb>=0.15.0
 sentencepiece>=0.1.99
 protobuf>=3.20.0
 fastapi>=0.95.0
 uvicorn>=0.22.0
 mcp>=0.1.0
-deepspeed>=0.9.5
+deepspeed>=0.12.0
 tensorboard>=2.12.0
 gradio>=3.32.0
