--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ datasets>=2.12.0
 accelerate>=0.20.0
 peft==0.8.2
 bitsandbytes>=0.40.0
-trl==0.8.0
+trl>=0.8.0
 wandb>=0.15.0
 sentencepiece>=0.1.99
 protobuf>=3.20.0
