--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 torch==2.5.0
 torchvision==0.20
-transformers==4.40.0
+transformers==4.51.3
 datasets>=2.12.0
 accelerate>=0.20.0
 peft==0.8.2
 bitsandbytes>=0.40.0
-trl>=0.8.0
+trl>=0.17.0
 wandb>=0.15.0
 sentencepiece>=0.1.99
-protobuf>=3.20.0
+protobuf==3.20.3
 fastapi>=0.95.0
 uvicorn>=0.22.0
 mcp>=0.1.0
