--- a/configs/ds_config.json
+++ b/configs/ds_config.json
@@ -11,9 +11,13 @@
         },
         "overlap_comm": true,
         "contiguous_gradients": true,
-        "reduce_bucket_size": 5e8,
-        "stage3_prefetch_bucket_size": 5e8,
-        "stage3_param_persistence_threshold": 1e6
+        "reduce_bucket_size": 5e7,
+        "stage3_prefetch_bucket_size": 5e7,
+        "stage3_param_persistence_threshold": 1e5,
+        "sub_group_size": 1e9,
+        "stage3_max_live_parameters": 1e9,
+        "stage3_max_reuse_distance": 1e9,
+        "stage3_gather_16bit_weights_on_model_save": true
     },
     "fp16": {
         "enabled": true,
@@ -41,8 +45,10 @@
         }
     },
     "steps_per_print": 10,
-    "train_batch_size": 16,
+    "train_batch_size": 4,
     "train_micro_batch_size_per_gpu": 1,
-    "gradient_accumulation_steps": 4,
-    "wall_clock_breakdown": false
+    "gradient_accumulation_steps": 1,
+    "wall_clock_breakdown": false,
+    "gradient_clipping": 1.0,
+    "memory_breakdown": true
 }
