--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ torchvision==0.20
 transformers==4.51.3
 datasets>=2.12.0
 accelerate>=0.20.0
-peft==0.8.2
-bitsandbytes>=0.40.0
+peft==0.7.1
+bitsandbytes==0.41.1
 trl>=0.17.0
 wandb>=0.15.0
 sentencepiece>=0.1.99
