--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ transformers==4.51.3
 datasets>=2.12.0
 accelerate>=0.20.0
 peft==0.7.1
-bitsandbytes==0.41.1
+bitsandbytes>=0.43.2
 trl>=0.17.0
 wandb>=0.15.0
 sentencepiece>=0.1.99
