--- a/configs/ds_config.json
+++ b/configs/ds_config.json
@@ -46,9 +46,11 @@
     },
     "steps_per_print": 10,
     "train_batch_size": "auto",
-    "train_micro_batch_size_per_gpu": 1,
+    "train_micro_batch_size_per_gpu": 2,
     "gradient_accumulation_steps": "auto",
     "wall_clock_breakdown": false,
     "gradient_clipping": 1.0,
-    "memory_breakdown": true
+    "memory_breakdown": true,
+    "zero_allow_untested_optimizer": true,
+    "communication_data_type": "fp16"
 }
