--- a/configs/ds_config.json
+++ b/configs/ds_config.json
@@ -46,7 +46,7 @@
     },
     "steps_per_print": 10,
     "train_batch_size": "auto",
-    "train_micro_batch_size_per_gpu": 2,
+    "train_micro_batch_size_per_gpu": "auto",
     "gradient_accumulation_steps": "auto",
     "wall_clock_breakdown": false,
     "gradient_clipping": 1.0,
