--- a/configs/ds_config.json
+++ b/configs/ds_config.json
@@ -11,12 +11,12 @@
         },
         "overlap_comm": true,
         "contiguous_gradients": true,
-        "reduce_bucket_size": 5e7,
-        "stage3_prefetch_bucket_size": 5e7,
-        "stage3_param_persistence_threshold": 1e5,
-        "sub_group_size": 1e9,
-        "stage3_max_live_parameters": 1e9,
-        "stage3_max_reuse_distance": 1e9,
+        "reduce_bucket_size": 2e7,
+        "stage3_prefetch_bucket_size": 2e7,
+        "stage3_param_persistence_threshold": 5e4,
+        "sub_group_size": 5e8,
+        "stage3_max_live_parameters": 5e8,
+        "stage3_max_reuse_distance": 5e8,
         "stage3_gather_16bit_weights_on_model_save": true
     },
     "fp16": {
@@ -52,5 +52,13 @@
     "gradient_clipping": 1.0,
     "memory_breakdown": true,
     "zero_allow_untested_optimizer": true,
-    "communication_data_type": "fp16"
+    "communication_data_type": "fp16",
+    "activation_checkpointing": {
+        "partition_activations": true,
+        "cpu_checkpointing": true,
+        "contiguous_memory_optimization": true,
+        "number_checkpoints": 2,
+        "synchronize_checkpoint_boundary": true,
+        "profile": false
+    }
 }
