--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,15 @@ mcp>=0.1.0
 deepspeed>=0.9.5
 tensorboard>=2.12.0
 gradio>=3.32.0
+
+# LLaMA Factory依赖
+llmtuner>=0.1.0
+scipy>=1.10.0
+tiktoken>=0.5.1
+einops>=0.6.1
+jieba>=0.42.1
+rouge-chinese>=1.0.3
+nltk>=3.8.1
+pydantic>=2.4.2
+uvicorn[standard]>=0.22.0
+sse-starlette>=1.6.5
