--- a/qwen_lora_sft.yaml
+++ b/qwen_lora_sft.yaml
@@ -11,7 +11,7 @@ lora_dropout: 0.1
 dataset: alpaca
 dataset_dir: ./training
 template: qwen
-cutoff_len: 8192
+cutoff_len: 4096  # 减小序列长度
 max_samples: 2  # 只使用前两个样本进行测试
 preprocessing_num_workers: 4
 
@@ -21,8 +21,8 @@ save_steps: 100
 plot_loss: true
 overwrite_output_dir: true
 
-per_device_train_batch_size: 4
-gradient_accumulation_steps: 4
+per_device_train_batch_size: 1  # 减小批次大小
+gradient_accumulation_steps: 8  # 增加梯度累积步数
 max_grad_norm: 1.0
 learning_rate: 2.0e-5
 num_train_epochs: 1.0
@@ -31,3 +31,4 @@ warmup_ratio: 0.1
 fp16: true
 
 deepspeed: configs/ds_config_zero2.json
+gradient_checkpointing: true  # 启用梯度检查点
