--- a/mcp/mcp_config.json
+++ b/mcp/mcp_config.json
@@ -3,7 +3,7 @@
     "secondKarlMarx": {
       "command": "python",
       "args": ["d:/王驰中的经历/研究生/研一下课程/自然语言处理/secondKarlMarx/mcp/server.py"],
-      "host": "your-server-ip",
+      "host": "183.223.25.19",
       "port": 8000
     }
   }
