--- a/marx_kg/config/graphrag_config.yaml
+++ b/marx_kg/config/graphrag_config.yaml
@@ -4,7 +4,7 @@
 models:
   # 聊天模型配置
   default_chat_model:
-    type: openai
+    type: openai_chat
     model: gpt-3.5-turbo
     encoding_model: cl100k_base
     api_key: ${DMX_API_KEY}
@@ -14,7 +14,7 @@ models:
   
   # 嵌入模型配置
   default_embedding_model:
-    type: openai
+    type: openai_embedding
     model: text-embedding-ada-002
     encoding_model: cl100k_base
     api_key: ${DMX_API_KEY}
