--- a/qwen_inference.yaml
+++ b/qwen_inference.yaml
@@ -3,3 +3,5 @@ adapter_name_or_path: ./outputs_llama_factory_full
 template: qwen
 finetuning_type: lora
 infer_backend: huggingface
+host: 0.0.0.0
+port: 8000
